# FPSP_Camera_FPC

./: .gitignore  BoM_overall.xlsx  CMakeLists.txt  FPSP Camera.kicad_pcb  FPSP Camera.kicad_pro  FPSP Camera.kicad_sch  README.md  fp-lib-table  main.c  sym-lib-table
.claude/: settings.local.json
Connector_board/: Connector_board.kicad_pcb  Connector_board.kicad_pro  Connector_board.kicad_sch
Connector_board/Connector_board/: Connector_board.kicad_pro  Connector_board.kicad_sch
archive_old/: FPSP Camera.kicad_pcb  FPSP Camera.kicad_pro  FPSP Camera.kicad_sch  fpc_imu_sch.kicad_sch  fpc_io.kicad_sch  fpc_mcu.kicad_sch  fpc_power.kicad_sch
camera_bringup_min/: CMakeLists.txt  README.md  heartbeat.pio  ov5640.c  ov5640.h
custom_fp/52435-2471/: 52435-2471.kicad_sym  MOLEX_52435-2471.kicad_mod
docs/: CMakeLists_fix.md  CMakeLists_guide.md  FPSP Camera.kicad_sch
docs/FPSP Project Outline/: Design Overview.pptx
fab_files/: BoM.csv
fab_files/gerber/: FPSP Camera-B_Silkscreen.gbr  FPSP Camera-Edge_Cuts.gbr  FPSP Camera-F_Cu.gbr  FPSP Camera-F_Silkscreen.gbr  FPSP Camera-NPTH.drl  FPSP Camera-PTH.drl  FPSP Camera-User_1.gbr  FPSP Camera-User_2.gbr  FPSP Camera-job.gbrjob
fab_files_fpc/JLC_SMT/: FPC_Camera_BoM.csv  FPC_Camera_CPL.csv  FPSP Camera-CPL.csv  FPSP Camera-top-pos.csv
fab_files_fpc/gerber/: FPSP Camera-B_Cu.gbr  FPSP Camera-B_Mask.gbr  FPSP Camera-B_Paste.gbr  FPSP Camera-B_Silkscreen.gbr  FPSP Camera-F_Cu.gbr  FPSP Camera-F_Mask.gbr  FPSP Camera-F_Paste.gbr  FPSP Camera-PTH.drl  FPSP Camera-User_1.gbr
fab_files_pcb/: Connector_board_BoM.csv
(+61 files in other folders)
